crates/gossamer-diagnostics/tests/snapshots/GP0055.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0055]: A call argument or a binary operand was written as a shared - here
--- framed ---
error[GP0055]: A call argument or a binary operand was written as a shared
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
