crates/gossamer-diagnostics/tests/snapshots/GP0056.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0056]: A cohort header used the retired `context:` isolation spelling. - here
--- framed ---
error[GP0056]: A cohort header used the retired `context:` isolation spelling.
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
