crates/gossamer-diagnostics/tests/snapshots/GR0003.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GR0003]: Two items in the same module share a name. Rename one of them — here
--- framed ---
error[GR0003]: Two items in the same module share a name. Rename one of them
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
