crates/gossamer-diagnostics/tests/snapshots/GR0004.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GR0004]: A `use` declaration imported the same name twice. Drop the — here
--- framed ---
error[GR0004]: A `use` declaration imported the same name twice. Drop the
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
