crates/gossamer-diagnostics/tests/snapshots/GR0005.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GR0005]: The `use` names a `std::` module path that does not exist. - here
--- framed ---
error[GR0005]: The `use` names a `std::` module path that does not exist.
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
