crates/gossamer-diagnostics/tests/snapshots/GR0008.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GR0008]: An item declared without `pub` is visible only inside the module - here
--- framed ---
error[GR0008]: An item declared without `pub` is visible only inside the module
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
