crates/gossamer-diagnostics/tests/snapshots/GR0010.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GR0010]: A `mod name;` declaration whose module source was never supplied. - here
--- framed ---
error[GR0010]: A `mod name;` declaration whose module source was never supplied.
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
